Minor fix to main nav on mobile. Needs more work.

--- a/static/css/main.styl
+++ b/static/css/main.styl
@@ -53,6 +53,7 @@ footer
   right 0
   left 0
   z-index 9999
+  padding .5rem 1rem !important
 
 .menu-background
   max-width 1140px
